# mp3-transcriber

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run-checks.sh  vercel.json
api/: index.py
docs/: project-improvements-summary.md  tech-context.md
src/app/: __init__.py  config.py  security.py  tasks.py  transcription.py
static/: index.html  script.js  style.css
tests/: conftest.py  test_api.py  test_security.py  test_tasks.py  test_transcription.py
